--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ img {vertical-align: middle;}
         <span class="tooltip">GitHub</span>
       </li>
       <li>
-        <a href="#">
+        <a href="links.html">
           <i class='bx bx-link' ></i>
           <span class="links_name">источники</span>
         </a>
