--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ img {vertical-align: middle;}
         <span class="tooltip">Links</span>
       </li>
       <li>
-        <a href="#">
+        <a href="https://github.com/kotru21/kotru21.github.io">
           <i class='bx bx-folder' ></i>
           <span class="links_name">github-репозиторий</span>
         </a>
