--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ img {vertical-align: middle;}
         <span class="tooltip">Youtube</span>
       </li>
       <li>
-        <a href="#">
+        <a href="https://github.com/kotru21">
           <i class='bx bxl-github' ></i>
           <span class="links_name">Мой github аккаунт</span>
         </a>
@@ -192,18 +192,18 @@ img {vertical-align: middle;}
         <span class="tooltip">GitHub_repo</span>
       </li>
       <li>
-        <a href="#">
+        <a href="about.html">
           <i class='bx bx-help-circle' ></i>
           <span class="links_name">about</span>
         </a>
-        <span class="tooltip">Order</span>
+        <span class="tooltip"></span>
       </li>
       <li>
         <a href="#">
           <i class='#' ></i>
           <span class="links_name">______________</span>
         </a>
-        <span class="tooltip">Saved</span>
+        <span class="tooltip"></span>
       </li>
       <li>
         <a href="#">
