--- a/index.html
+++ b/index.html
@@ -151,8 +151,6 @@ img {vertical-align: middle;}
 
 
       </div>
-
-
   <div class="sidebar">
     <div class="logo_content">
       <div class="logo">
@@ -196,7 +194,7 @@ img {vertical-align: middle;}
           <i class='bx bx-help-circle' ></i>
           <span class="links_name">about</span>
         </a>
-        <span class="tooltip"></span>
+        <span class="tooltip">about</span>
       </li>
       <li>
         <a href="#">
