--- a/links.html
+++ b/links.html
@@ -1,5 +1,34 @@
-<h1>здесь собраны те элементы которые я использовал на этом сайте(и те которые помню)</h1>
-<p><a href="https://unpkg.com/boxicons@2.0.9/"><h2>красивые ico картинки из из нав.панели</h2></p>
-<p><a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow_auto"><h2>слайдер</h2></p>
-<p><a href="https://dev.to/codinglabweb/side-navigation-bar-in-html-css-javascript-3d9d"><h2>sidebar</h2></p>
+<head>
+    <title>links</title>
+</head>
 
+<body style="background-color: rgb(158, 158, 158);">
+<div class="pagemiddle">
+<h1 class="collection">здесь собраны те элементы которые я использовал на этом сайте(и те которые помню)</h1>
+<div class="linksdiv">
+<a href="https://unpkg.com/boxicons@2.0.9/" class="links"><h2>красивые ico картинки из из нав.панели</h2>
+<p><a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow_auto" class="links"><h2>слайдер</h2></p>
+<p><a href="https://dev.to/codinglabweb/side-navigation-bar-in-html-css-javascript-3d9d" class="links"><h2>sidebar</h2></p>
+</div>
+</div>
+    <style>
+        .collection{
+            background-color: rgb(77, 69, 87);
+            color: rgb(233, 233, 233);
+            padding-left: 1%;
+        }
+        .linksdiv{
+            background-color: rgb(68, 68, 68);
+            padding-top: 0.4%;
+            padding-left: 1%;
+            padding-bottom: 0.4%;
+        }
+        .links{
+            color: rgb(144, 170, 255);
+        }
+        .pagemiddle{
+            background-color: rgb(86, 80, 95);
+        }
+
+    </style>
+</body>
