--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ img {vertical-align: middle;}
       </div>
  
       <div class="content">
-        <h1 class="web">Сайт</h1>
+        <h1 class="web">&nbsp;<div class="bx bx-globe"> Привет</div></h1>
         <p class="content_d">Здесь могло бы быть что-то написано но мне лень это писать.</p>
         
       </div>
@@ -292,7 +292,7 @@ body {
 box-shadow: 0px 5px 8px 5px rgba(34, 60, 80, 0.06);
 }
 
-.content {padding:10px; }
+.content {padding:10px;}
 
 /* Header/Logo Title */
 .header {
