--- a/index.html
+++ b/index.html
@@ -173,6 +173,13 @@ img {vertical-align: middle;}
         <span class="tooltip">Youtube</span>
       </li>
       <li>
+        <a href="https://steamcommunity.com/id/baturchik">
+          <i class='bx bxl-steam'></i>
+          <span class="links_name">Мой Steam аккаунт</span>
+        </a>
+        <span class="tooltip">Steam</span>
+      </li>
+      <li>
         <a href="https://github.com/kotru21">
           <i class='bx bxl-github' ></i>
           <span class="links_name">Мой github аккаунт</span>
