--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
 
     <!-- Boxicons CDN Link -->
-    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Styles file-->
+    <link rel="stylesheet" href="styles.css">
    </head>
 <body>
   
