--- a/links.html
+++ b/links.html
@@ -71,7 +71,9 @@
         .text1{
             color: rgb(144, 170, 255);
         }
-
+        body {
+            overflow: hidden; 
+        }
 
     </style>
 </body>
