--- a/links.html
+++ b/links.html
@@ -42,7 +42,7 @@
        <a href="https://github.com/alexandresanlim/Badges4-README.md-Profile">
        <div class="info">
            <h2 class="text1">badges</h2>
-           <div class="preview_img"> <img src="img4.png" class="preview_img"></div>
+           <div class="preview_img"> <img src="img4.PNG" class="preview_img"></div>
        </div>
      </div>
    </a>
