--- a/about.html
+++ b/about.html
@@ -1,2 +1,33 @@
-<h1>что это?</h1>
-<p>это просто сайт,который я решил сделать</p>
+<html>
+    <head>
+        <title>about</title>
+    </head>
+    <body style="background-color:rgb(85, 85, 85);text-align:center;">
+
+<div class="container">
+                
+<h1 class="web">Этот сайт сделан с помощью</h1>
+<div class="icons2">
+<img src="https://img.shields.io/badge/HTML5-E34F25?style=for-the-badge&logo=html5&logoColor=white">
+<img src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white">
+<img src="https://img.shields.io/badge/JavaScript-323330?style=for-the-badge&logo=javascript&logoColor=F7DF1E">
+<img src="https://img.shields.io/badge/GitHub-black?style=for-the-badge&logo=github&logoColor=white">
+</div>
+</div>
+</div>
+</body>
+<style>
+
+.container{
+    margin-top:5%;
+    justify-content: center;
+    background-color: #474655;
+    color: white;
+}
+.web{
+    font-size: 40px;
+    text-align: center;
+    justify-content: center;
+}
+</style>
+</html>
