--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
            <a href="https://unpkg.com/boxicons@2.0.9/">
            <div class="info">
                <h2 class="text1">icons</h2>
-               <div class="preview_img"> <img src="img3.PNG" class="preview_img"></div>
+               <div class="preview_img"> <img src="src/img3.PNG" class="preview_img"></div>
            </div>
          </div>
        </a>
@@ -20,7 +20,7 @@
     <a href="https://dev.to/codinglabweb/side-navigation-bar-in-html-css-javascript-3d9d">
     <div class="info">
         <h2 class="text1">Sidebar</h2>
-        <img src="img1.PNG" class="preview_img">
+        <img src="src/img1.PNG" class="preview_img">
     </div>
   </div>
 </a>
@@ -31,7 +31,7 @@
        <a href="https://w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow_auto">
        <div class="info">
            <h2 class="text1">slider</h2>
-           <div class="preview_img"> <img src="img2.PNG" class="preview_img"></div>
+           <div class="preview_img"> <img src="src/img2.PNG" class="preview_img"></div>
        </div>
      </div>
    </a>
@@ -42,7 +42,7 @@
        <a href="https://github.com/alexandresanlim/Badges4-README.md-Profile">
        <div class="info">
            <h2 class="text1">badges</h2>
-           <div class="preview_img"> <img src="img4.PNG" class="preview_img"></div>
+           <div class="preview_img"> <img src="src/img4.PNG" class="preview_img"></div>
        </div>
      </div>
    </a>
