--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
             <div class="container">
-            <img src="img_nature_wide.jpg" class="sliderimg">
+            <img src="src/img_nature_wide.jpg" class="sliderimg">
             </div>
             <div class="text">
               <span class="dot1"></span> 
@@ -29,7 +29,7 @@
           <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
             <div class="container">
-            <img src="img_snow_wide.jpg" class="sliderimg">
+            <img src="src/img_snow_wide.jpg" class="sliderimg">
             </div>
             <div class="text">
               <span class="dot"></span> 
@@ -40,7 +40,7 @@
           <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
             <div class="container">
-            <img src="img_mountains_wide.jpg" class="sliderimg">
+            <img src="src/img_mountains_wide.jpg" class="sliderimg">
             </div>
             <div class="text">
               <span class="dot"></span> 
