--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <i class='bx bxl-vk' ></i>
           <span class="links_name">Мой <b>ВКонтакте</b> </span>
         </a>
-        <span class="tooltip"></span>
+        <span class="tooltip">Вконтакте</span>
       </li>
       <li>
         <a href="https://www.youtube.com/channel/UCOYprFCDyhHdhbtfzZNqYFQ">
