--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
           </div>
           <br>                   
       </div>
-      <div class="content">
+      <div class="content"> <!-- idk for what but it exist :)-->
         
-        <h1 class="web">&nbsp;<div class="bx bx-globe"> Привет </h1>
-        <div class="content_d">Здесь могло бы быть что-то написано, но мне лень это писать. <br>Пока что просто посмотрите на моего кота:)  
+        <h1 class="web"> Привет </h1>
+        <div class="content_d">
+        <div class="textcover"><div class="text_inside"><p>Здесь могло бы быть что-то написано, но мне лень это писать.</p></div> <div class="text_inside"><p>Пока что просто посмотрите на моего кота:) </p></div></div>
         <div class="cat_div">
-        <img src="src/cat.jpg" class="catpic">
+        <img src="src/cat.jpg" class="catpic" alt="meow">
         </div>
+      </div>
       </div>
       
 
