--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
     <title>Homepage</title>
-    <link rel="shortcut icon" type="image/jpg" href="src/weblogo.ico"/>
+    <link rel="shortcut icon" type="image/jpg" href="./src/weblogo.ico"/>
     <!-- Boxicons CDN Link -->
      <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
