imagine a big commit

--- a/links.html
+++ b/links.html
@@ -1,5 +1,6 @@
 <head>
     <title>links</title>
+    <link rel="shortcut icon" type="image/jpg" href="src/weblogo.ico"/>
 </head>
 
 <body style="background-color: rgb(158, 158, 158);">
