--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>О сайте:)</title>
-        <link rel="shortcut icon" type="image/jpg" href="weblogo.ico"/>
+        <link rel="shortcut icon" type="image/jpg" href="src/weblogo.ico"/>
     </head>
     <body style="background-color:rgb(85, 85, 85);text-align:center;font-size: 2vh;">
 
