--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <div class="row">&nbsp;&nbsp;lose any unsaved information in all applications.</div>
     <div class="row">&nbsp;</div>
     <div class="centered_btn">
-    <button class="btn">жмякни, чтобы вернуться на главную страницу...</button>
+    <button class="btn" onclick="window.location.href='./index.html'">жмякни, чтобы вернуться на главную страницу...</button>
     </div>
     </div>
 
