--- a/404.html
+++ b/404.html
@@ -1,4 +1,5 @@
 <div class="notfound">
+    <!-- may contain some issues with Safari browser) -->
     <div class="inverted">404<span class="blink">&#9608;</span></div></div>
     
  
