--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <div class="notfound">
-    <!-- may contain some issues with Safari browser) -->
+    <!-- may contain some issues with Safari browser), because of using pt in text sizing -->
     <div class="inverted">404<span class="blink">&#9608;</span></div></div>
     
  
