--- a/index.html
+++ b/index.html
@@ -53,17 +53,27 @@
           </div>
           <br>                   
       </div>
-      <div class="content"> <!-- idk for what but it exist :)-->
-        
-        <h1 class="web"> Привет </h1>
+    <div class="content"> <!-- idk for what but it exist :)-->
+      <div class="animated_text">
+        <h1 class="web"><span class="animatedtext-content"> Привет </span></h1>
         <div class="content_d">
-        <div class="textcover"><div class="text_inside"><p>Здесь могло бы быть что-то написано, но мне лень это писать.</p></div> <div class="text_inside"><p>Пока что просто посмотрите на моего кота:) </p></div></div>
+        <div class="textcover"><div class="text_inside">
+          <p>
+          <span class="animatedtext-content animatedtext-second">Здесь могло бы быть что-то написано, но мне лень это писать.</span>
+          </p>
+      </div> 
+          <div class="text_inside">
+            <p>
+            <span class="animatedtext-content animatedtext-second">Пока что просто посмотрите на моего кота:) </span>
+            </p>
+        </div>
+      </div>
         <div class="cat_div">
         <img src="src/cat.jpg" class="catpic" alt="meow">
         </div>
       </div>
       </div>
-      
+    </div>
 
   <div class="sidebar">
     <div class="logo_content">
