--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         <div class="content_d">
         <div class="textcover"><div class="text_inside">
           <p>
-          <span class="animatedtext-content animatedtext-second">Здесь могло бы быть что-то написано, но мне лень это писать.</span>
+          <span class="animatedtext-content">Здесь могло бы быть что-то написано, но мне лень это писать.</span>
           </p>
       </div> 
           <div class="text_inside">
             <p>
-            <span class="animatedtext-content animatedtext-second">Пока что просто посмотрите на моего кота:) </span>
+            <span class="animatedtext-content">Пока что просто посмотрите на моего кота:) </span>
             </p>
         </div>
       </div>
