--- a/links.html
+++ b/links.html
@@ -93,7 +93,7 @@
 
     .animatedtext-content {
       display: block;
-      opacity: none;
+      opacity: 0;
       animation: rText .5s forwards;
     }
 
