--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
           <div class="textcover">
             <div class="text_inside">
               <p>
-                <span class="animatedtext-content animatedtext-second">Здесь могло бы быть что-то написано, но мне лень это писать.</span>
+                <span class="animatedtext-content animatedtext-second">Здесь могло бы быть что-то написано, но мне лень
+                  это писать.</span>
               </p>
             </div>
             <div class="text_inside">
@@ -74,7 +75,9 @@
             </div>
           </div>
           <div class="cat_div">
-            <img src="src/cat.jpg" class="catpic" alt="meow">
+            <span class="animatedtext-content animatedtext-second">
+              <img src="src/cat.jpg" class="catpic" alt="meow">
+            </span>
           </div>
         </div>
       </div>
