--- a/about.html
+++ b/about.html
@@ -1,115 +1,101 @@
 <html>
+	<head>
+		<title>О сайте:)</title>
+		<link rel="shortcut icon" type="image/jpg" href="src/weblogo.ico" />
+	</head>
 
-<head>
-    <title>О сайте:)</title>
-    <link rel="shortcut icon" type="image/jpg" href="src/weblogo.ico" />
-</head>
+	<body style="background-color: rgb(85, 85, 85); text-align: center; font-size: 2vh">
+		<div class="container">
+			<h1>Этот сайт сделан с помощью</h1>
 
-<body style="background-color:rgb(85, 85, 85);text-align:center;font-size: 2vh;">
+			<span class="animatedtext-content animatedtext-second">
+				<img class="img" src="https://img.shields.io/badge/HTML5-E34F25?style=for-the-badge&logo=html5&logoColor=white" />
+			</span>
+			<span class="animatedtext-content animatedtext-third">
+				<img class="img" src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white" />
+			</span>
+			<span class="animatedtext-content animatedtext-third">
+				<img class="img" src="https://img.shields.io/badge/GitHub-black?style=for-the-badge&logo=github&logoColor=white" />
+			</span>
+			<span class="animatedtext-content animatedtext-second">
+				<img class="img" src="https://img.shields.io/badge/JavaScript-323330?style=for-the-badge&logo=javascript&logoColor=F7DF1E" />
+			</span>
+			<p>
+				<button class="back" onclick="window.location.href='./index.html'">вернуться назад</button>
+			</p>
+		</div>
+	</body>
+	<style>
+		.animatedtext {
+			color: #fff;
+			text-transform: uppercase;
+			line-height: 40px;
+		}
 
-    <div class="container">
+		.animatedtext-content {
+			opacity: 0;
+			animation: rText 0.5s forwards;
+		}
 
-        <h1>Этот сайт сделан с помощью</h1>
+		.animatedtext-second {
+			animation-delay: 0.305s;
+		}
 
-        <span class="animatedtext-content animatedtext-second">
-            <img class="img"
-                src="https://img.shields.io/badge/HTML5-E34F25?style=for-the-badge&logo=html5&logoColor=white">
-        </span>
-        <span class="animatedtext-content animatedtext-third">
-            <img class="img"
-                src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white">
-        </span>
-        <span class="animatedtext-content animatedtext-third">
-            <img class="img"
-                src="https://img.shields.io/badge/GitHub-black?style=for-the-badge&logo=github&logoColor=white">
-        </span>
-        <span class="animatedtext-content animatedtext-second">
-            <img class="img"
-                src="https://img.shields.io/badge/JavaScript-323330?style=for-the-badge&logo=javascript&logoColor=F7DF1E">
-        </span>
-        <p>
-            <button class="back" onclick="window.location.href='./index.html'">вернуться назад</button>
-    </div>
-    </div>
+		.animatedtext-third {
+			animation-delay: 0.175s;
+		}
 
-</body>
-<style>
-    .animatedtext {
-        color: #fff;
-        text-transform: uppercase;
-        line-height: 40px;
-    }
+		@keyframes rText {
+			to {
+				opacity: 1;
+				transform: none;
+			}
+		}
 
-    .animatedtext-content {
-        opacity: 0;
-        animation: rText .5s forwards;
-    }
+		.container {
+			margin-top: 5%;
+			background-color: #474655;
+			color: white;
+			padding-bottom: 40px;
+			padding-top: 20px;
+		}
 
-    .animatedtext-second {
-        animation-delay: .305s;
+		.back {
+			background-color: #585769;
+			font-size: 4vh;
+			text-align: center;
+			margin-top: 1%;
+			border-radius: 5px;
+			border-width: 0px;
+			box-shadow: 0 0 5px rgb(59, 59, 59);
+			color: white;
+			padding: 10px;
+		}
 
-    }
+		.back:hover {
+			background-color: #4a4a5a;
 
-    .animatedtext-third {
-        animation-delay: .175s;
+			text-align: center;
+			margin-top: 1%;
+			border-radius: 5px;
+			border-width: 0px;
+			box-shadow: 0 0 15px rgb(167, 109, 159);
+			color: white;
+			padding: 10px;
+		}
 
-    }
+		.img {
+			width: 30vh;
+			margin: 20px;
+			border-radius: 10px;
+			box-shadow: 0 0 5px rgb(59, 59, 59);
+		}
 
-    @keyframes rText {
-
-        to {
-            opacity: 1;
-            transform: none;
-        }
-    }
-
-    .container {
-        margin-top: 5%;
-        background-color: #474655;
-        color: white;
-        padding-bottom: 40px;
-        padding-top: 20px;
-
-    }
-
-    .back {
-        background-color: #585769;
-        font-size: 4vh;
-        text-align: center;
-        margin-top: 1%;
-        border-radius: 5px;
-        border-width: 0px;
-        box-shadow: 0 0 5px rgb(59, 59, 59);
-        color: white;
-        padding: 10px;
-
-    }
-
-    .back:hover {
-        background-color: #4a4a5a;
-
-        text-align: center;
-        margin-top: 1%;
-        border-radius: 5px;
-        border-width: 0px;
-        box-shadow: 0 0 15px rgb(167, 109, 159);
-        color: white;
-        padding: 10px;
-    }
-
-    .img {
-        width: 30vh;
-        margin: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 5px rgb(59, 59, 59);
-    }
-
-    hr {
-        margin-left: 5%;
-        margin-right: 5%;
-        border-width: 2px;
-        border-style: solid;
-    }
-</style>
-
+		hr {
+			margin-left: 5%;
+			margin-right: 5%;
+			border-width: 2px;
+			border-style: solid;
+		}
+	</style>
 </html>
