looks better? Maybe

--- a/about.html
+++ b/about.html
@@ -63,25 +63,19 @@
     .back {
       background-color: #585769;
       font-size: 4vh;
-      text-align: center;
-      margin-top: 1%;
-      border-radius: 5px;
+      border-radius: 30px;
+      width: 35%;
       border-width: 0px;
       box-shadow: 0 0 5px rgb(59, 59, 59);
       color: white;
       padding: 10px;
+      margin-bottom: 2vh;
     }
 
     .back:hover {
-      background-color: #4a4a5a;
-
-      text-align: center;
-      margin-top: 1%;
-      border-radius: 5px;
-      border-width: 0px;
       box-shadow: 0 0 15px rgb(167, 109, 159);
-      color: white;
-      padding: 10px;
+      background-color: rgba(167, 109, 159, 0.479);
+      transition: 0.3s;
     }
 
     .img {
