webpage-name change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
-    <title>Homepage</title>
+    <title>Добро пожаловать</title>
     <link rel="shortcut icon" type="image/jpg" href="./src/weblogo.ico" />
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
