--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
     <title>Добро пожаловать</title>
+    <meta property="og:image" content=".src/preview.png" />
     <link rel="shortcut icon" type="image/jpg" href="./src/weblogo.ico" />
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
