--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
     <title>Добро пожаловать</title>
     <meta property="og:image" content=".src/preview.png" />
+    <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta name="twitter:image" content=".src/preview.png" />
     <link rel="shortcut icon" type="image/jpg" href="./src/weblogo.ico" />
     <!-- Boxicons CDN Link -->
