--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
     <title>Добро пожаловать</title>
-    <meta property="og:image" content=".src/preview.png" />
+    <meta property="og:image" content="https://github.com/kotru21/kotru21.github.io/blob/main/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
-    <meta name="twitter:image" content=".src/preview.png" />
+    <meta name="twitter:image" content="https://github.com/kotru21/kotru21.github.io/blob/main/src/preview.png" />
     <link rel="shortcut icon" type="image/jpg" href="./src/weblogo.ico" />
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
