--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
     <title>Добро пожаловать</title>
+    <link rel="image_src" href=".src/preview.png" />
     <meta property="og:image" content="https://github.com/kotru21/kotru21.github.io/blob/main/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
     <meta name="twitter:image" content="https://github.com/kotru21/kotru21.github.io/blob/main/src/preview.png" />
