--- a/links.html
+++ b/links.html
@@ -1,5 +1,9 @@
 <head>
   <title>links</title>
+    <link rel="image_src" href=".src/preview.png" />
+    <meta property="og:image" content="https://github.com/kotru21/kotru21.github.io/blob/main/src/preview.png" />
+    <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
+    <meta name="twitter:image" content="https://github.com/kotru21/kotru21.github.io/blob/main/src/preview.png" />
   <link rel="shortcut icon" type="image/jpg" href="src/weblogo.ico" />
 </head>
 
