--- a/about.html
+++ b/about.html
@@ -1,10 +1,11 @@
 <html>
   <head>
     <title>О сайте:)</title>
+    <meta property="vk:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png">
     <link rel="image_src" href=".src/preview.png" />
-    <meta property="og:image" content="https://github.com/kotru21/kotru21.github.io/blob/main/src/preview.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
-    <meta name="twitter:image" content="https://github.com/kotru21/kotru21.github.io/blob/main/src/preview.png" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png" />
     <link rel="shortcut icon" type="image/jpg" href="src/weblogo.ico" />
   </head>
 
