--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
     <title>Добро пожаловать</title>
     <meta property="vk:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png">
+    <meta property="vk:description" content="Описание? Ну и что мне сюда написать?...">
     <link rel="image_src" href=".src/preview.png" />
     <meta property="og:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
