--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <!--<title> Responsive Sidebar Menu  | CodingLab </title>-->
     <title>Добро пожаловать</title>
+    <meta property="og:locale" content="ru_RU"/>
     <meta property="vk:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png">
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?...">
     <link rel="image_src" href=".src/preview.png" />
