--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Добро пожаловать</title>
-    <meta property="og:locale" content="ru_RU"/>
-    <meta property="vk:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png">
-    <meta property="vk:description" content="Описание? Ну и что мне сюда написать?...">
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="vk:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png" />
+    <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
     <link rel="image_src" href=".src/preview.png" />
     <meta property="og:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
@@ -35,17 +35,17 @@
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="mobile.png" style="width: 100%" />
+          <img src="./src/mobile.png" style="width: 100%" />
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="mobile_red.png" style="width: 100%" />
+          <img src="./src/mobile_red.png" style="width: 100%" />
         </div>
 
         <div class="mySlides fade">
           <div class="numbertext"></div>
-          <img src="mobile_orange.png" style="width: 100%" />
+          <img src="./src/mobile_orange.png" style="width: 100%" />
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
       <div class="row">
         <div class="col-sm-4 d-inline-flex">
           <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-            <img class="card-img-top" src="JS.png" alt="Card image cap" />
+            <img class="card-img-top" src="./src/JS.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">Javascript</h5>
               <p class="card-text">JavaScript это язык, который позволяет вам применять сложные вещи на web странице.</p>
@@ -76,7 +76,7 @@
         </div>
         <div class="col-sm-4 d-inline-flex">
           <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-            <img class="card-img-mid" src="CSS.png" alt="Card image cap" />
+            <img class="card-img-mid" src="./src/CSS.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
               <p class="card-text">Cascading Style Sheets — формальный язык описания внешнего вида web страницы.</p>
@@ -88,7 +88,7 @@
         </div>
         <div class="col-sm-4 d-inline-flex">
           <div class="card" style="width: 100rem; margin: 0 auto; float: none; margin-bottom: 10px">
-            <img class="card-img-bottom" src="HTML.png" alt="Card image cap" />
+            <img class="card-img-bottom" src="./src/HTML.png" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
               <p class="card-text">Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно отображать загруженный сайт.</p>
@@ -111,7 +111,7 @@
         А пока посмотрите на моего котика:)
       </h3>
 
-      <img src="cat.jpg" class="rounded mx-auto d-block" alt="catpic" width="90%" />
+      <img src="./src/cat.jpg" class="rounded mx-auto d-block" alt="catpic" width="90%" />
       <p></p>
       <hr class="hr" />
     </div>
@@ -144,4 +144,3 @@
     }
   </script>
 </html>
-
