--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   </head>
 
   <body class="bd">
+    <img src="./src/mobile.png" style="display: none" />
+    <img src="./src/mobile_red.png" style="display: none" />
+    <img src="./src/mobile_orange.png" style="display: none" />
     <nav class="navbar">
       <div class="mx-auto my-2 order-1 order-md-1 position-relative">
         <span class="animatedtext-content"
