--- a/404.html
+++ b/404.html
@@ -1,3 +1,12 @@
+<head>
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="vk:image" content="https://raw.githubusercontent.com/kotru21/kotikov/692cbe38d76e22377098f54d42920f5ec326f624/src/preview.png" />
+    <meta property="vk:description" content="Описание? Ну и что мне сюда написать?..." />
+    <link rel="image_src" href=".src/preview.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/kotru21/kotikov/692cbe38d76e22377098f54d42920f5ec326f624/src/preview.png" />
+    <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/kotru21/kotikov/692cbe38d76e22377098f54d42920f5ec326f624/src/preview.png" />
+</head>
 <div class="notfound">
   <!-- may contain some issues with Safari browser), because of using pt in text sizing -->
   <div class="inverted">404<span class="blink">&#9608;</span></div>
