--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Добро пожаловать</title>
     <meta property="og:locale" content="ru_RU"/>
-    <meta property="vk:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png">
+    <meta property="vk:image" content="./src/preview.png">
     <meta property="vk:description" content="Описание? Ну и что мне сюда написать?...">
     <link rel="image_src" href=".src/preview.png" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png" />
+    <meta property="og:image" content="./src/preview.png" />
     <meta property="og:description" content="Описание? Ну и что мне сюда написать?..." />
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/kotru21/kotru21.github.io/main/src/preview.png" />
+    <meta name="twitter:image" content="./src/preview.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
